--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "estimate-pro",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
-  "description": "A modern, professional estimate generation system built with Next.js. Features dynamic line items, automatic markup calculations, and PDF export capabilities.",
+  "description": "Professional estimate generation system",
+  "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "setup": "node scripts/init-db.js",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "set NODE_ENV=production&& node server.js",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.8.1",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "lucide-react": "^0.473.0",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite": "^5.1.1",
@@ -21,6 +29,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
