--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^11.8.1",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "lucide-react": "^0.473.0",
+    "better-sqlite3": "^9.2.0",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "lucide-react": "^0.300.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "passport": "^0.7.0",
@@ -32,5 +32,8 @@
     "cross-env": "^7.0.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
