--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "^9.2.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.300.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
