Fixed docker biuld issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
-version: '3.3'
+version: '3.8'
 
 services:
   app:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     volumes:
       - ./data:/app/data
     environment:
       - NODE_ENV=production
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_SECRET=estimatepro_secret_key_123
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
