--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.2.0",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "lucide-react": "^0.300.0",
@@ -24,6 +25,7 @@
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
