--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,15 @@ services:
       - ./data:/app/data
     environment:
       - NODE_ENV=production
-      - NEXTAUTH_URL=https://estimatepro.com
+      - NEXTAUTH_URL=https://unifi.kc2vrj.com:3000
       - NEXTAUTH_SECRET=estimatepro_secret_key_123
       - DATABASE_PATH=/app/data/estimates.db
+      # Optional SSL configuration
+      - #SSL_DOMAIN=${SSL_DOMAIN:-}
+      - SSL_DOMAIN=unifi.kc2vrj.com
+      - SSL_EMAIL=pnannery@gmail.com
+      #- SSL_EMAIL=${SSL_EMAIL:-}
+      
     restart: unless-stopped
     networks:
       - app_network
@@ -28,15 +34,6 @@ services:
     depends_on:
       - app
     restart: unless-stopped
-    networks:
-      - app_network
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
       - app_network
 
